# simplest_encoder

simplest_x265_encoder/: CMakeLists.txt  cuc_ieschool.h265  simplest_x265_encoder.cpp
